fix 508 contrast error; need fallback contrast in links

--- a/inst/css/footer.css
+++ b/inst/css/footer.css
@@ -9,6 +9,7 @@ footer{
 	}
 	
 footer a{
+	background:#414042;
   text-decoration:none;
 }
 	
